# csp_lab1

./: CMakeLists.txt  img.txt
src/: AlphaExpansion.cpp  AlphaExpansion.hpp  CrossingOut.cpp  CrossingOut.hpp  CrossingOutPath.cpp  CrossingOutPath.hpp  Diffusion.cpp  Diffusion.hpp  FordFulkerson.cpp  FordFulkerson.hpp  Graph.hpp  ImgToSegProblem.cpp  ImgToSegProblem.h  MaxPlus.cpp  MaxPlus.hpp  TabledGraph.cpp  TabledGraph.hpp  main.cpp
src/lab1/: main.cpp
src/lab2/: main.cpp
src/lab3/: main.cpp
